# cinema_admin_panel

./: .env.example  .gitignore  README.md  docker-compose.yml  load_data.py  pyproject.toml  test.py
config/: settings.py
movies/: admin.py  models.py
movies/locale/ru/LC_MESSAGES/: django.po
movies/migrations/: 0001_initial.py
movies_admin/: README.md
schema_design/: README.md  sql.ddl
sqlite_to_postgres/: README.md  load_data.py  sql.ddl  sqlite_models.py  utils_models.py
