[tool.poetry]
name = "new_admin_panel_sprint_1"
version = "0.1.0"
description = ""
authors = ["bekishev04 <bekishev04@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9.3"
Django = "^4.1"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
pytest = "7.1.2"
black = "22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
